# carbon-ir

./: CMakeLists.txt  README.md  build.sh  buildlib.sh  test.sh
docs/: api.md  machines.md  operations.md
include/: argument.h  attributes.h  config.h  core.h  debug.h  errsys.h  function.h  generator.h  machine.h  oplist.h  parser.h  register.h  scanner.h  token.h  type.h
include/api/: carbon.h  ops.h
include/arch/Z80/: generator.h  optimizer.h
include/arch/aarch64/: generator.h  optimizer.h
include/arch/eZ80/: generator.h  optimizer.h
include/arch/i386/: archconfig.h  generator.h  optimizer.h
include/arch/jvm/: generator.h  optimizer.h
include/optimizer/: optimizer.h  reggraph.h
src/: argument.cpp  attributes.cpp  errsys.cpp  function.cpp  machine.cpp  main.cpp  oplist.cpp  parser.cpp  register.cpp  scanner.cpp  token.cpp  type.cpp
src/api/: bindings.cpp
src/arch/aarch64/: codegen.cpp  generator.cpp
src/arch/i386/: codegen.cpp  generator.cpp  optimizer.cpp
src/arch/jvm/: codegen.cpp  generator.cpp
src/generator/: generate.cpp  generator.cpp
src/optimizer/: optimizer.cpp  regassign.cpp
tests/: test.py
tests/capi/: Makefile  test0.c  test1.c
tests/capitest/: Makefile  test0.c
tests/testfiles/: test0.ir  test1.ir  test10.ir  test11.ir  test12.ir  test13.ir  test14.ir  test15.ir  test16.ir  test2.ir  test3.ir  test4.ir  test5.ir  test6.ir  test7.ir  test8.ir  test9.ir
